fix sizing on mobile

--- a/src/capi-single-paidfor/web/index.scss
+++ b/src/capi-single-paidfor/web/index.scss
@@ -16,8 +16,12 @@
   }
 
   .advert__image-container {
-    flex-basis: calc(50% - 10px);
+    flex-basis: 100%;
     height: 100%;
+
+    @include mq(tablet) {
+      flex-basis: calc(60% - 10px);
+    }
   }
 
   .badge::before {
